# py-toolbox

./: .pre-commit-config.yaml  GEMINI.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  pull-request.yml  push-main.yml
src/py_toolbox/: __init__.py
src/py_toolbox/bitwarden/: __init__.py  actor.py  manager.py
tests/bitwarden/: test_manager.py
tests/py_toolbox/bitwarden/: test_actor.py
